# py2femm

./: .gitignore  BLDC_whole_v2.lua  README.md  bldc_whole_v2_analysis.ans  bldc_whole_v2_analysis.fem  pyproject.toml  requirements.txt
_data/: menu.yml
attempts/: first.py  rotor.py  rotor_final.py  rotor_v2.py  vasmag.py  whole_pacek_final.py  whole_v1.py
docs/: _config.yml  geometry_generation.md  index.md
docs/site/: index.html
examples/: double_l_shape_domain.py  planar_capacitor.py  solenoid.py
examples/SynRM/: Read_in_Test.py  SzESynRM_full_model.dxf  geom_from_dxf.py
examples/electrostatics/: planar_capacitor.md  planar_capacitor.py
examples/electrostatics/capacitance/: planar_capacitor.md  planar_capacitor.py
examples/electrostatics/double_l_shape/: double_l_shape_domain.py
examples/magnetics/: FrozenBenchmark.py  MeshExtract.lua  MeshExtract.py  meshTopology.py  mesh_extract_rev.py  meshextract.csv  solenoid.ans  solenoid.csv  solenoid.py
examples/magnetics/FI-PMASynRM/: calculate_average_torque_and_ripple.py  calculate_cogging_torque.py  calculate_max_torque_angle.py  machine_model.py  test.py  (+1 more)
py2femm/: current_flow.py  electrostatics.py  executor.py  femm_problem.py  femm_server.py  general.py  geometry.py  heatflow.py  magnetics.py
src/: current_flow.py  electrostatics.py  executor.py  femm_problem.py  femm_server.py  general.py  geometry.py  heatflow.py  magnetics.py  writer.py
tests/: test_electrostatic_problem.py  test_executor.py  test_femm_problem.py  test_femm_writer.py  test_geometry.py
tests/test_files/: invalid.lua
(+1040 files in other folders)
