[tool.poetry]
name = "py2femm"
version = "0.1.0"
description = ""
authors = ["Tamás Orosz <tamas.orosz@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
